imp mergeKSortedList added in hashmap